--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Technical Team Member</h3>
                             <div class="subheading mb-3">E-Cell MIT-WPU</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>Heavily Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2024 - Present</span></div>
                     </div>
